shopingkart/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Available__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Available</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>armani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>levi&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hugo boss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bluemint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>edition scotland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>marwood</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Colour__c</fullName>
        <label>Colour</label>
        <picklist>
            <picklistValues>
                <fullName>Neutral5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blues5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dark5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Earth5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pastel5</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
</CustomObject>